[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartgrid-rl-v1"
version = "1.0.0"
description = "Professional OpenEnv energy balancing environment."
readme = "README.md"
authors = [{ name = "shivamverma27799" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic>=2.0.0",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
packages = ["."]
