[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartgrid-rl-v1"
version = "1.0.0"
description = "Professional OpenEnv energy balancing environment."
readme = "README.md"
authors = [{ name = "shivamverma27799" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openai",
    "pyyaml",
    "openenv"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
py-modules = ["app", "environment", "tasks", "inference"]
