[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartgrid-rl-v1"
version = "1.0.0"
description = "Professional OpenEnv energy balancing environment."
readme = "README.md"
authors = [{ name = "shivamverma27799" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openai",
    "pyyaml",
    "openenv"
]

[project.scripts]
# This points exactly to the new function we just made
server = "server.app:main"

[tool.setuptools]
# This tells the installer to include the new server folder
packages = ["server"]
py-modules = ["environment", "tasks", "inference"]
